fixed padding for images on books.html and stretched them to fit the card

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,10 @@ body {
     overflow: hidden;
 }
 
+.row,
+.row > * {
+    padding: 0 !important;
+}
 
 /*----Add book page----*/
 
@@ -81,9 +85,15 @@ h6 {
     width: 50px;
 }
 
+.card-img-top {
+    width: 100%;
+    height: 320px; /* You can adjust this value to fit your design */
+    object-fit: cover; /* This will cover the card area without distorting the aspect ratio */
+}
+
 .card-img-top-books {
     width: 100%;
-    object-fit: fill;
+    object-fit: contain;
 }
 
 .buy-now-link {
